zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__increasing_size_into_main_pane_in_stack_horizontally_does_not_break_stack.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
assertion_line: 4141
expression: snapshot
---
00 (C): ┌ Pane #1 ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
01 (C): │                                                                                                                       │
02 (C): │                                                                                                                       │
03 (C): │                                                                                                                       │
04 (C): │                                                                                                                       │
05 (C): │                                                                                                                       │
06 (C): │                                                                                                                       │
07 (C): │                                                                                                                       │
08 (C): │                                                                                                                       │
09 (C): │                                                                                                                       │
10 (C): │                                                                                                                       │
11 (C): │                                                                                                                       │
12 (C): └───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
13 (C): ┌ Pane #11 ───────────────────────────────────────────────────────┐┌ Pane #4 ───────────────────────────────────────────┐
14 (C): │                                                                 │┌ Pane #5 ───────────────────────────────────────────┐
15 (C): │                                                                 │┌ Pane #6 ───────────────────────────────────────────┐
16 (C): │                                                                 │┌ Pane #7 ───────────────────────────────────────────┐
17 (C): │                                                                 │┌ Pane #8 ───────────────────────────────────────────┐
18 (C): └─────────────────────────────────────────────────────────────────┘┌ Pane #9 ───────────────────────────────────────────┐
19 (C): ┌ Pane #2 ────────────────────────────────────────────────────────┐┌ Pane #10 ──────────────────────────────────────────┐
20 (C): │                                                                 ││                                                    │
21 (C): │                                                                 ││                                                    │
22 (C): │                                                                 ││                                                    │
23 (C): │                                                                 ││                                                    │
24 (C): │                                                                 ││                                                    │
25 (C): └─────────────────────────────────────────────────────────────────┘└────────────────────────────────────────────────────┘
26 (C): ┌ Pane #3 ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
27 (C): │                                                                                                                       │
28 (C): │                                                                                                                       │
29 (C): │                                                                                                                       │
30 (C): │                                                                                                                       │
31 (C): │                                                                                                                       │
32 (C): │                                                                                                                       │
33 (C): │                                                                                                                       │
34 (C): │                                                                                                                       │
35 (C): │                                                                                                                       │
36 (C): │                                                                                                                       │
37 (C): │                                                                                                                       │
38 (C): │                                                                                                                       │
39 (C): └───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘

